src/objects/BMCServiceDesk__SelfService_Image__c.object
<CustomObject>
    <description>This object holds the images used for branding of Self Service</description>
    <fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>SelfService Images</relationshipLabel>
        <relationshipName>SelfService_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Image_Key__c</fullName>
        <label>Image Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LoginHeader</fullName>
                </value>
                <value>
                    <fullName>BannerHeader</fullName>
                </value>
                <value>
                    <fullName>Logo</fullName>
                </value>
                <value>
                    <fullName>Background</fullName>
                </value>
                <value>
                    <fullName>MainApplication Logo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Image_Type__c</fullName>
        <label>Image Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SelfService Image</label>
    <nameField>
        <label>Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SelfService Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>